[package]
name = "rbonsai"
version = "0.1.2"
edition = "2021"
authors = ["Ethan Wilkes <rewilkes0041@gmail.com>"]
description = "A terminal bonsai tree generator"
documentation = "https://docs.rs/rbonsai"
keywords = ["bonsai", "rbonsai", "cbonsai"]
license = "GPL-3.0-or-later"
repository = "https://github.com/roberte777/rbonsai"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
rand = "0.8.5"
